--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "materialize-css": "^1.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "uuid": "^8.3.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
