--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ngrx/effects": "^10.0.0",
     "@ngrx/store": "^10.0.0",
     "@ngrx/store-devtools": "^10.0.0",
-    "materialize-css": "^1.0.0",
+    "ngx-indexed-db": "^6.0.5",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "uuid": "^8.3.0",
