--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+  },
+  "engines": {
+    "node": "12.18.2",
+    "npm": "6.14.5"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +30,7 @@
     "@ngrx/effects": "^10.0.0",
     "@ngrx/store": "^10.0.0",
     "@ngrx/store-devtools": "^10.0.0",
+    "express": "^4.17.1",
     "ngx-indexed-db": "^6.0.5",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
